--- a/API/NuiApiWrapper/NuiApiWrapper.csproj
+++ b/API/NuiApiWrapper/NuiApiWrapper.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="JayrockCollectionImporter.cs" />
     <Compile Include="nuiConnection.cs" />
     <Compile Include="nuiEndpoint.cs" />
     <Compile Include="nuiModule.cs" />
     <Compile Include="nuiPipeline.cs" />
     <Compile Include="nuiState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="nuiUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Jayrock\Jayrock.Json\Jayrock.Json.csproj">
